Resolve conflict in chrome://flags and field trial config.

Chrome crashed when the same finch field trial is specified in
chrome://flags and in field trial config. The trial variation parameters
selected in chrome://flags are registered first. Registering overrides
from field trial config happens later (and may cause a DCHECK failure).

This CL skips field trials from the trial config that have been
registered before (from chrome://flags).

BUG=636765

Review-Url: https://codereview.chromium.org/2236293002
Cr-Commit-Position: refs/heads/master@{#411558}

Former-commit-id: 25e794db58321015633eb287553b8a529eb8e309